[gd_scene load_steps=7 format=3 uid="uid://donnvmvbqack2"]

[ext_resource type="Script" uid="uid://bes2y6x8kph2i" path="res://itch_login.gd" id="1_63mqi"]
[ext_resource type="Script" uid="uid://b1k11sxneg1ar" path="res://butler_connection.gd" id="2_21nvm"]
[ext_resource type="Script" uid="uid://bsa6o5ox4ok1a" path="res://input_quit_game_controller.gd" id="3_147q3"]
[ext_resource type="Script" uid="uid://cg27bp0xwfy4t" path="res://cave_launcher.gd" id="4_rm38c"]
[ext_resource type="PackedScene" uid="uid://bi4mxp4w8msr" path="res://ui/games/games_ui_controller.tscn" id="5_ipikq"]
[ext_resource type="Script" uid="uid://dl47qghvx374s" path="res://input_editor_quit.gd" id="6_ipikq"]

[node name="Main" type="Node" node_paths=PackedStringArray("connection", "cave_launcher", "games_ui")]
script = ExtResource("1_63mqi")
connection = NodePath("butler_connection")
cave_launcher = NodePath("cave_launcher")
games_ui = NodePath("CanvasLayer/games_ui_controller")
metadata/_custom_type_script = "uid://bes2y6x8kph2i"

[node name="butler_connection" type="Node" parent="."]
script = ExtResource("2_21nvm")
metadata/_custom_type_script = "uid://b1k11sxneg1ar"

[node name="input_quit_game_controller" type="Node" parent="."]
script = ExtResource("3_147q3")
metadata/_custom_type_script = "uid://bsa6o5ox4ok1a"

[node name="cave_launcher" type="Node" parent="." node_paths=PackedStringArray("quit_input_handler")]
script = ExtResource("4_rm38c")
quit_input_handler = NodePath("../input_quit_game_controller")
metadata/_custom_type_script = "uid://cg27bp0xwfy4t"

[node name="input_editor_quit" type="Node" parent="." node_paths=PackedStringArray("launcher")]
script = ExtResource("6_ipikq")
launcher = NodePath("../cave_launcher")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="games_ui_controller" parent="CanvasLayer" node_paths=PackedStringArray("launcher", "connection") instance=ExtResource("5_ipikq")]
launcher = NodePath("../../cave_launcher")
connection = NodePath("../../butler_connection")
